--- a/XamCross/XamCross/XamCross.csproj
+++ b/XamCross/XamCross/XamCross.csproj
@@ -20,5 +20,8 @@
     <EmbeddedResource Update="Views\Timer.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\TwoWayBinding.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
