--- a/XamCross/XamCross.Android/XamCross.Android.csproj
+++ b/XamCross/XamCross.Android/XamCross.Android.csproj
@@ -60,6 +60,7 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\DroidLocalFileHelper.cs" />
     <Compile Include="Data\SQLite_Droid.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
