--- a/XamCross/XamCross.Android/XamCross.Android.csproj
+++ b/XamCross/XamCross.Android/XamCross.Android.csproj
@@ -94,13 +94,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XamCross\XamCross.csproj">
       <Project>{5A3062ED-9E27-4BE8-AE0C-B10782FE0F11}</Project>
       <Name>XamCross</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\down_arrow.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
